add useState for input

--- a/components/css/SearchCSS.css
+++ b/components/css/SearchCSS.css
@@ -17,6 +17,11 @@
   border: 1px solid #ddd;
   margin-bottom: 1rem;
   width: 100%;
+  transition: all 0.2s ease;
+}
+
+.userInputError {
+  background-color: pink;
 }
 
 .button {
